bir çok model eklendi

--- a/.env
+++ b/.env
@@ -7,3 +7,11 @@ DB_NAME=sercanyemeksepeti
 DB_USER=sercan
 DB_PASSWORD=sercan12
 DB_HOST=localhost
+
+# Email configuration
+
+EMAIL_HOST = 'smtp.gmail.com'
+EMAIL_PORT = 587
+EMAIL_HOST_USER = 'srcnbsrn125@gmail.com'
+EMAIL_HOST_PASSWORD = 'django1234'
+EMAIL_USE_TLS = True
